Add a new CSS file with class tags to elements
I'll be adding styles to a previous HTML project

--- a/recipes/soups-and-stews.html
+++ b/recipes/soups-and-stews.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Healthy Recipe</title>
+        <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
         <a href="./../index.html">Home</a>
-        <h1>Asian Beef and Vegetable Stir-Fry</h1>
+        <h1 class="heading">Asian Beef and Vegetable Stir-Fry</h1>
         <img src="./../images/black-bean-soup-img.jpg" alt="black-bean-soup-img" width="480" height="330">
-        <h2>Description</h2>
+        <h2 class="heading">Description</h2>
         <p>This soup is very simple and it takes about 5 minutes to prepare</p>
         <h2>Ingredients</h2>
         <ul>
