--- a/recipes/dessert.html
+++ b/recipes/dessert.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Dessert Recipe</title>
+        <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
         <a href="./../index.html">Home</a>
