Add new styles to html structure using basic css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta >
         <title>
             Odin Recipes Project
         </title>
@@ -10,13 +11,16 @@
     </head>
     <body>
         <div class="banner">
-            <span class="logo"> <img src="./images/recipe-logo1.jpeg" alt="logo"></span>
+            <div class="logo-container">
+                <img src="/images/recipe-logo1.jpeg" alt="logo-img" class="logo" width="100px" height="100px">
+            </div>
             <div class="hero">
-                <h1 class="text-header">Odin Recipes</h1>
-                <ul class="links">
-                    <li class="link-1"><a href="./recipes/healthy-recipe.html" target="_blank">Healthy Recipe</a></li>
-                    <li class="link-2"><a href="./recipes/soups-and-stews.html" target="_blank">Soups and Stews Recipe</a></li>
-                    <li class="link-3"><a href="./recipes/dessert.html" target="_blank">Desserts Recipe</a></li>
+                <h1 class="heading banner-header"><span class="title">Odin</span> Recipes</h1>
+                <p class="text text-header">Your Taste Pallete's Valhalla</p>
+                <ul>
+                    <li class="links"><a href="./recipes/healthy-recipe.html" target="_blank">Healthy Recipe</a></li>
+                    <li class="links"><a href="./recipes/soups-and-stews.html" target="_blank">Soups and Stews Recipe</a></li>
+                    <li class="link"><a href="./recipes/dessert.html" target="_blank">Desserts Recipe</a></li>
                 </ul>
             </div>
         </div>
