--- a/recipes/dessert.html
+++ b/recipes/dessert.html
@@ -6,13 +6,15 @@
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
-        <a href="./../index.html">Home</a>
-        <h1>Homemade Blueberry Pie</h1>
+        <a href="./../index.html" class="links">Home</a>
+        <h1 class="heading">Homemade Blueberry Pie</h1>
         <img src="./../images/dessert-recipe-img.jpg" alt="dessert-recipe-img" width="480" height="330">
-        <h2>Description</h2>
-        <p>Nothing screams "summer" quite like blueberry pie. This recipe for blueberries is so popular that it will soon become a seasonal mainstay in your home!</p>
-        <h2>Ingredients</h2>
-        <ul>
+        <!-- Description section -->
+        <h2 class="heading">Description</h2>
+        <p class="text">Nothing screams "summer" quite like blueberry pie. This recipe for blueberries is so popular that it will soon become a seasonal mainstay in your home!</p>
+        <!-- Ingredients section -->
+        <h2 class="heading">Ingredients</h2>
+        <ul class="text">
             <li><strong>Sugar:</strong> This blueberry pie recipe starts with a cup of white sugar.</li>
             <li><strong>Cornstarch:</strong> Cornstarch thickens the blueberry pie filling, preventing runniness.</li>
             <li><strong>Cinnamon:</strong> Ground cinnamon adds subtle warmth.</li>
@@ -21,12 +23,12 @@
             <li><strong>Pie crust:</strong> Use a store-bought or homemade pastry crust.</li>
             <li><strong>Butter:</strong> You'll need just a tablespoon of butter.</li>
         </ul>
-        <h2>Directions</h2>
-        <ol>
+        <h2 class="heading">Directions</h2>
+        <ol class="text">
             <li>Sprinkle the berries with sugar, cornstarch, cinnamon, and salt.</li>
             <li>Pour the filling into the bottom pie crust and finish with a lattice crust on top.</li>
             <li>Bake until the filling is bubbling and the crust is golden.</li>
         </ol>
-        <a href="#top">Back to top</a>
+        <a href="#top" class="links">Back to top</a>
     </body>
 </html>
