--- a/recipes/healthy-recipe.html
+++ b/recipes/healthy-recipe.html
@@ -6,13 +6,15 @@
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
-        <a href="./../index.html" id="top">Home</a>
-        <h1>Asian Beef and Vegetable Stir-Fry</h1>
+        <a href="./../index.html" id="top" class="links">Home</a>
+        <h1 class="heading">Asian Beef and Vegetable Stir-Fry</h1>
         <img src="./../images/healthy-recipe.jpg" alt="healthy-recipe-img" width="480" height="330">
-        <h2>Description</h2>
-        <p>A tasty combination of savory tastes using lean steak, this Asian beef and vegetable stir-fry is a quick and nutritious dinner option for any day of the week.</p>
-        <h2>Ingredients</h2>
-        <ul>
+         <!-- Description section -->
+        <h2 class="heading">Description</h2>
+        <p class="text">A tasty combination of savory tastes using lean steak, this Asian beef and vegetable stir-fry is a quick and nutritious dinner option for any day of the week.</p>
+        <!-- Ingredients section -->
+        <h2 class="heading">Ingredients</h2>
+        <ul class="text">
             <li>1 pound boneless, top sirloin steak, 1-inch thick </li>
             <li>4 cups assorted fresh vegetables, such as sugar snap peas, broccoli florets, bell peppers, and carrot strips</li>
             <li>1 clove garlic, minced</li>
@@ -21,14 +23,15 @@
             <li>2 cups hot cooked rice</li>
             <li>2 tablespoons unsalted dry-roasted peanuts (Optional)</li>
         </ul>
-        <h2>Directions</h2>
-        <ol>
+        <!-- Directions Section -->
+        <h2 class="heading">Directions</h2>
+        <ol class="text">
             <li>Halve steak lengthwise, then cut crosswise into 1/4-inch-thick strips.</li>
             <li>Cook vegetables with 3 tablespoons water, covered, in a large nonstick skillet over medium-high heat until crisp-tender, about 4 minutes. Transfer vegetables to a bowl; drain any excess water. Set aside.</li>
             <li>Heat same skillet over medium-high heat until hot. Add 1/2 the steak and 1/2 the garlic; cook until outside surface of steak is no longer pink, 1 to 2 minutes. Transfer to a plate. Repeat with remaining steak and garlic.</li>
             <li>Return steak and vegetables to skillet. Add stir-fry sauce and red pepper flakes; heat through. Serve over hot rice; sprinkle with peanuts.</li>
         </ol>
         <br>
-        <a href="#top">Back to top</a>
+        <a href="#top" class="links">Back to top</a>
     </body>
 </html>
