--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
     </head>
     <body>
         <div class="banner">
-            <div class="logo-container">
-                <img src="/images/recipe-logo1.jpeg" alt="logo-img" class="logo" width="100px" height="100px">
-            </div>
             <div class="hero">
                 <h1 class="heading banner-header"><span class="title">Odin</span> Recipes</h1>
                 <p class="text text-header">Your Taste Pallete's Valhalla</p>
-                <ul>
-                    <li class="links"><a href="./recipes/healthy-recipe.html" target="_blank">Healthy Recipe</a></li>
-                    <li class="links"><a href="./recipes/soups-and-stews.html" target="_blank">Soups and Stews Recipe</a></li>
-                    <li class="link"><a href="./recipes/dessert.html" target="_blank">Desserts Recipe</a></li>
+                <ul class="list">
+                    <li><a href="./recipes/healthy-recipe.html" target="_blank" class="links">Healthy Recipe</a></li>
+                    <li><a href="./recipes/soups-and-stews.html" target="_blank" class="links">Soups and Stews Recipe</a></li>
+                    <li><a href="./recipes/dessert.html" target="_blank" class="links">Desserts Recipe</a></li>
                 </ul>
             </div>
         </div>
