Add some css styling using box-model properties

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="hero">
                 <h1 class="heading banner-header"><span class="title">Odin</span> Recipes</h1>
                 <p class="text text-header">Your Taste Pallete's Valhalla</p>
-                <ul class="list">
+                <ul class="link-list">
                     <li><a href="./recipes/healthy-recipe.html" target="_blank" class="links">Healthy Recipe</a></li>
                     <li><a href="./recipes/soups-and-stews.html" target="_blank" class="links">Soups and Stews Recipe</a></li>
                     <li><a href="./recipes/dessert.html" target="_blank" class="links">Desserts Recipe</a></li>
