--- a/recipes/dessert.html
+++ b/recipes/dessert.html
@@ -6,13 +6,17 @@
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
-        <a href="./../index.html" class="links">Home</a>
-        <h1 class="heading">Homemade Blueberry Pie</h1>
-        <img src="./../images/dessert-recipe-img.jpg" alt="dessert-recipe-img" width="480" height="330">
+        <section class="section">
+            <a href="./../index.html" class="links">Home</a>
+        <h1 class="section-title">Homemade Blueberry Pie</h1>
+        <img src="./../images/dessert-recipe-img.jpg" alt="dessert-recipe-img" width="270" height="170" class="image">
         <!-- Description section -->
+        <div class="text-container">
         <h2 class="heading">Description</h2>
         <p class="text">Nothing screams "summer" quite like blueberry pie. This recipe for blueberries is so popular that it will soon become a seasonal mainstay in your home!</p>
+    </div>
         <!-- Ingredients section -->
+        <div class="text-container">
         <h2 class="heading">Ingredients</h2>
         <ul class="text">
             <li><strong>Sugar:</strong> This blueberry pie recipe starts with a cup of white sugar.</li>
@@ -23,12 +27,18 @@
             <li><strong>Pie crust:</strong> Use a store-bought or homemade pastry crust.</li>
             <li><strong>Butter:</strong> You'll need just a tablespoon of butter.</li>
         </ul>
+    </div>
+        <!-- Directions section -->
+         <div class="text-container">
         <h2 class="heading">Directions</h2>
         <ol class="text">
             <li>Sprinkle the berries with sugar, cornstarch, cinnamon, and salt.</li>
             <li>Pour the filling into the bottom pie crust and finish with a lattice crust on top.</li>
             <li>Bake until the filling is bubbling and the crust is golden.</li>
         </ol>
-        <a href="#top" class="links">Back to top</a>
+        <a href="#top" class="links bottom-links">Back to top</a>
+    </div>
+    </section>
+        
     </body>
 </html>
