--- a/recipes/soups-and-stews.html
+++ b/recipes/soups-and-stews.html
@@ -2,17 +2,21 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Healthy Recipe</title>
+        <title>Soups and Stews Recipe</title>
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body>
-        <a href="./../index.html" class="links">Home</a>
-        <h1 class="heading">Asian Beef and Vegetable Stir-Fry</h1>
-        <img src="./../images/black-bean-soup-img.jpg" alt="black-bean-soup-img" width="480" height="330">
+        <section class="section">
+            <a href="./../index.html" class="links">Home</a>
+        <h1 class="section-title">Salsa and Black Bean Soup</h1>
+        <img src="./../images/black-bean-soup-img.jpg" alt="black-bean-soup-img" width="270" height="170" class="image">
          <!-- Description section -->
+          <div class="text-container">
         <h2 class="heading">Description</h2>
         <p class="text">This soup is very simple and it takes about 5 minutes to prepare</p>
+    </div>
         <!-- Ingredients section -->
+        <div class="text-container">
         <h2 class="heading">Ingredients</h2>
         <ul class="text">
             <li>2 (15 ounce) cans black beans, drained and rinsed</li>
@@ -22,12 +26,18 @@
             <li>4 tablespoons sour cream</li>
             <li> 2 tablespoons thinly sliced green onion</li>
         </ul>
+        </div>
+        <!-- Directions section -->
+        <div class="text-container">
         <h2 class="heading">Directions</h2>
         <ol class="text">
             <li>In an electric food processor or blender, combine beans, broth, salsa, and cumin. Blend until fairly smooth.</li>
             <li>Heat the bean mixture in a saucepan over medium heat until thoroughly heated.</li>
             <li>Ladle soup into 4 individual bowls, and top each bowl with 1 tablespoon of the sour cream and 1/2 tablespoon green onion.</li>
         </ol>
-        <a href="#top" class="links">Back to top</a>
+        <a href="#top" class="links bottom-links">Back to top</a>
+    </div>
+    </section>
+        
     </body>
 </html>
