Update the site by making it responsive -basically

--- a/recipes/dessert.html
+++ b/recipes/dessert.html
@@ -9,7 +9,7 @@
         <section class="section">
             <a href="./../index.html" class="links">Home</a>
         <h1 class="section-title">Homemade Blueberry Pie</h1>
-        <img src="./../images/dessert-recipe-img.jpg" alt="dessert-recipe-img" width="270" height="170" class="image">
+        <img src="./../images/dessert-recipe-img.jpg" alt="dessert-recipe-img" max-width="270" height="170" class="image">
         <!-- Description section -->
         <div class="text-container">
         <h2 class="heading">Description</h2>
