--- a/recipes/healthy-recipe.html
+++ b/recipes/healthy-recipe.html
@@ -9,7 +9,7 @@
         <section class="section">
             <a href="./../index.html" id="top" class="links">Home</a>
             <h1 class="section-title">Asian Beef and Vegetable <br>Stir-Fry</h1>
-            <img src="./../images/healthy-recipe.jpg" alt="healthy-recipe-img" width="270" height="170" class="image">
+            <img src="./../images/healthy-recipe.jpg" alt="healthy-recipe-img" max-width="270" height="170" class="image">
          <!-- Description section -->
             <div class="text-container">
                 <h2 class="heading">Description</h2>
