--- a/recipes/soups-and-stews.html
+++ b/recipes/soups-and-stews.html
@@ -9,7 +9,7 @@
         <section class="section">
             <a href="./../index.html" class="links">Home</a>
         <h1 class="section-title">Salsa and Black Bean Soup</h1>
-        <img src="./../images/black-bean-soup-img.jpg" alt="black-bean-soup-img" width="270" height="170" class="image">
+        <img src="./../images/black-bean-soup-img.jpg" alt="black-bean-soup-img" max-width="270" height="170" class="image">
          <!-- Description section -->
           <div class="text-container">
         <h2 class="heading">Description</h2>
